# Airlock-Lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  MASTER-INDEX.md  PROJECT-STATE.md  README.md  eslint.config.js  package-lock.json  package.json
adrs/proposed/: 0001-record-architecture-decisions.md  0002-use-tauri-react-typescript-vite.md  0003-use-sqlite-for-local-persistence.md  0004-implement-provider-abstraction-with-mock-first-then-omp.md
agents/core/: executor.md  orchestrator.md  planner.md  reviewer.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
design-system/components/: README.md  buttons.md  iconography.md  navigation.md  panels.md
design-system/foundations/: color.md  spacing.md  typography.md
design-system/patterns/: ai-explanations.md  approval-flows.md
design-system/tokens/: README.md  token-strategy.md
docs/: README.md  demo-script.md  demo-workflow.md  mvp-scope.md  roadmap.md
docs/ai-system/: agent-runtime.md  ai-native-workspace.md  context-engine.md  human-approval.md  provider-adapters.md  reasoning-transparency.md
docs/architecture/: extensibility-model.md  local-first-architecture.md  module-boundaries.md  system-overview.md  workspace-model.md
docs/engineering/: README.md  code-quality.md  contribution-guide.md  development-workflow.md  frontend.md  testing-strategy.md
docs/features/: README.md  file-preview.md  git-status.md  proposed-changes.md  repository-indexing.md
(+125 files in other folders)
