[package]
name = "ai-developer-workspace"
version = "0.0.0"
description = "AI Developer Workspace desktop shell"
authors = ["AI Developer Workspace"]
edition = "2021"

[lib]
name = "ai_developer_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
